umap3d, hover fn, fixed point info

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(mainTaxonomyRank)
 export(parseDomainInput)
 export(parseInfoProfile)
 export(plotUmap)
+export(plotUmap3D)
 export(prepareUmapData)
 export(processNcbiTaxonomy)
 export(processOrthoID)
@@ -74,6 +75,7 @@ export(sortInputTaxa)
 export(sortTaxaFromTree)
 export(taxonomyTableCreator)
 export(umapClustering)
+export(umapClustering3D)
 export(varDistTaxPlot)
 export(wideToLong)
 export(xmlParser)
@@ -82,6 +84,7 @@ import(ExperimentHub)
 import(data.table, except = c(first, last, between))
 import(dplyr)
 import(ggplot2)
+import(plotly, except = last_plot)
 import(scattermore)
 import(umap)
 importFrom(Biostrings,readAAStringSet)
