--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,11 +10,11 @@ export(clusterDataDend)
 export(compareMedianTaxonGroups)
 export(compareTaxonGroups)
 export(createArchiPlot)
+export(createDimRedPlotData)
 export(createGeneAgePlot)
 export(createLongMatrix)
 export(createPercentageDistributionData)
 export(createProfileFromOma)
-export(createUmapPlotData)
 export(createUnrootedTree)
 export(createVarDistPlot)
 export(createVariableDistributionData)
@@ -23,6 +23,7 @@ export(dataCustomizedPlot)
 export(dataFeatureTaxGroup)
 export(dataMainPlot)
 export(dataVarDistTaxGroup)
+export(dimReduction)
 export(estimateGeneAge)
 export(fastaParser)
 export(featureDistTaxPlot)
@@ -55,7 +56,7 @@ export(getTaxonomyInfo)
 export(getTaxonomyMatrix)
 export(getTaxonomyRanks)
 export(gridArrangeSharedLegend)
-export(groupLabelUmapData)
+export(groupLabelDimRedData)
 export(heatmapPlotting)
 export(heatmapPlottingFast)
 export(highlightProfilePlot)
@@ -64,9 +65,9 @@ export(linearizeArchitecture)
 export(mainTaxonomyRank)
 export(parseDomainInput)
 export(parseInfoProfile)
-export(plotUmap)
-export(plotUmap3D)
-export(prepareUmapData)
+export(plotDimRed)
+export(plotDimRed3D)
+export(prepareDimRedData)
 export(processNcbiTaxonomy)
 export(processOrthoID)
 export(reduceProfile)
@@ -74,8 +75,6 @@ export(runPhyloProfile)
 export(sortInputTaxa)
 export(sortTaxaFromTree)
 export(taxonomyTableCreator)
-export(umapClustering)
-export(umapClustering3D)
 export(varDistTaxPlot)
 export(wideToLong)
 export(xmlParser)
@@ -86,6 +85,7 @@ import(dplyr)
 import(ggplot2)
 import(plotly, except = last_plot)
 import(scattermore)
+import(tsne)
 import(umap)
 importFrom(Biostrings,readAAStringSet)
 importFrom(DT,dataTableOutput)
@@ -110,11 +110,18 @@ importFrom(data.table,transpose)
 importFrom(dplyr,add_count)
 importFrom(dplyr,arrange)
 importFrom(dplyr,count)
+importFrom(dplyr,distinct)
+importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(energy,dcor)
 importFrom(extrafont,font_import)
 importFrom(extrafont,fonts)
+importFrom(fastcluster,hclust)
 importFrom(grDevices,colorRampPalette)
 importFrom(gridExtra,arrangeGrob)
 importFrom(gridExtra,grid.arrange)
@@ -136,9 +143,10 @@ importFrom(shinyjs,enable)
 importFrom(shinyjs,html)
 importFrom(shinyjs,reset)
 importFrom(shinyjs,toggleState)
+importFrom(stats,aggregate)
 importFrom(stats,as.dist)
+importFrom(stats,complete.cases)
 importFrom(stats,dist)
-importFrom(stats,hclust)
 importFrom(stats,na.omit)
 importFrom(stringr,str_count)
 importFrom(stringr,str_split_fixed)
