make PhyloProfile fast again #105

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,7 +83,7 @@ import(ExperimentHub)
 import(data.table, except = c(first, last, between))
 import(dplyr)
 import(ggplot2)
-import(plotly, except = last_plot)
+import(plotly, except = c(last_plot, select))
 import(scattermore)
 import(tsne)
 import(umap)
@@ -93,6 +93,7 @@ importFrom(DT,renderDataTable)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(RColorBrewer,brewer.pal.info)
 importFrom(RCurl,url.exists)
+importFrom(Rfast,Dist)
 importFrom(ape,as.phylo)
 importFrom(ape,plot.phylo)
 importFrom(ape,read.tree)
