--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: PhyloProfile
-Version: 1.21.7
-Date: 2024-12-03
+Version: 1.99.0
+Date: 2024-12-17
 Title: PhyloProfile
 Authors@R: c(
     person("Vinh", "Tran", role = c("aut", "cre"), email = "tran@bio.uni-frankfurt.de", comment=c(ORCID="0000-0001-6772-7595")),
@@ -17,8 +17,8 @@ biocViews: Software, Visualization, DataRepresentation, MultipleComparison, Func
 Imports:
     ape, bioDist, BiocStyle, Biostrings, colourpicker, data.table, dplyr, DT,
     energy, ExperimentHub, extrafont, fastcluster, ggplot2, gridExtra, pbapply, 
-    plotly, RColorBrewer, RCurl, scattermore, shiny, shinyBS, shinycssloaders, 
-    shinyFiles, shinyjs, stringr, tsne, umap, xml2, zoo, yaml
-RoxygenNote: 7.3.1
+    plotly, RColorBrewer, RCurl, Rfast, scattermore, shiny, shinyBS, 
+    shinycssloaders, shinyFiles, shinyjs, stringr, tsne, umap, xml2, zoo, yaml
+RoxygenNote: 7.3.2
 Suggests: knitr, rmarkdown, testthat, OmaDB
 VignetteBuilder: knitr
